readability fixes, interested to see how this looks on the large display

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -7,11 +7,14 @@ body {
 .summary {
   position: absolute;
   top: 50%;
-  transform: translatY(-50%);
+  transform: translateY(-50%);
+  th, td {
+    font-size: 24px;
+  }
 }
 
 tbody {
-  th {
+  th, td {
     text-align: right;
   }
 }
